<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvTitulo"
                android:text="@string/formulario"
                android:textSize="30sp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAllCaps="true"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etNombre"
                    android:layout_marginStart="20dp"/>
        </LinearLayout>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etCorreo"
                android:inputType="textEmailAddress"
                android:hint="@string/correo"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etCedula"
                android:inputType="number"
                android:hint="@string/cedula"/>
        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <RadioButton android:id="@+id/rbMasculino"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/masculino"
                         android:onClick="onRadioButtonClicked"
                         android:checked="true"/>
            <RadioButton android:id="@+id/rbFemenino"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/femenino"
                         android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha_de_nacimiento"
                android:onClick="showDatePickerDialog" />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/cbCine"
                    android:text="@string/cine"
                    android:onClick="onCheckboxClicked"/>
            <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/cbNadar"
                    android:text="@string/nadar"
                    android:onClick="onCheckboxClicked"/>
            <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/cbLeer"
                    android:text="@string/Leer"
                    android:onClick="onCheckboxClicked"/>
            <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/cbSeries"
                    android:text="@string/series"
                    android:onClick="onCheckboxClicked"/>
        </LinearLayout>

        <Button
                android:text="@string/guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bnGuardar"
                android:textAllCaps="false"
                android:textSize="20sp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txResultado"
                android:textSize="20sp"
                android:textColor="@color/red"
                android:text="TextView"/>
    </LinearLayout>
</ScrollView>



